aot-next-front/styles/Home.module.scss
/* ... */
.banner {
  height: auto;
  position: relative;
  margin-top: $headerHeight;
  // background-color: #2F4858;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 100 60'%3E%3Cg %3E%3Crect fill='%232F4858' width='11' height='11'/%3E%3Crect fill='%232f4858' x='10' width='11' height='11'/%3E%3Crect fill='%232f4858' y='10' width='11' height='11'/%3E%3Crect fill='%232f4757' x='20' width='11' height='11'/%3E%3Crect fill='%232f4757' x='10' y='10' width='11' height='11'/%3E%3Crect fill='%232e4757' y='20' width='11' height='11'/%3E%3Crect fill='%232e4757' x='30' width='11' height='11'/%3E%3Crect fill='%232e4757' x='20' y='10' width='11' height='11'/%3E%3Crect fill='%232e4756' x='10' y='20' width='11' height='11'/%3E%3Crect fill='%232e4656' y='30' width='11' height='11'/%3E%3Crect fill='%232e4656' x='40' width='11' height='11'/%3E%3Crect fill='%232e4656' x='30' y='10' width='11' height='11'/%3E%3Crect fill='%232e4656' x='20' y='20' width='11' height='11'/%3E%3Crect fill='%232d4655' x='10' y='30' width='11' height='11'/%3E%3Crect fill='%232d4655' y='40' width='11' height='11'/%3E%3Crect fill='%232d4555' x='50' width='11' height='11'/%3E%3Crect fill='%232d4555' x='40' y='10' width='11' height='11'/%3E%3Crect fill='%232d4555' x='30' y='20' width='11' height='11'/%3E%3Crect fill='%232d4554' x='20' y='30' width='11' height='11'/%3E%3Crect fill='%232d4554' x='10' y='40' width='11' height='11'/%3E%3Crect fill='%232d4554' y='50' width='11' height='11'/%3E%3Crect fill='%232c4454' x='60' width='11' height='11'/%3E%3Crect fill='%232c4453' x='50' y='10' width='11' height='11'/%3E%3Crect fill='%232c4453' x='40' y='20' width='11' height='11'/%3E%3Crect fill='%232c4453' x='30' y='30' width='11' height='11'/%3E%3Crect fill='%232c4453' x='20' y='40' width='11' height='11'/%3E%3Crect fill='%232c4453' x='10' y='50' width='11' height='11'/%3E%3Crect fill='%232c4352' x='70' width='11' height='11'/%3E%3Crect fill='%232c4352' x='60' y='10' width='11' height='11'/%3E%3Crect fill='%232c4352' x='50' y='20' width='11' height='11'/%3E%3Crect fill='%232b4352' x='40' y='30' width='11' height='11'/%3E%3Crect fill='%232b4352' x='30' y='40' width='11' height='11'/%3E%3Crect fill='%232b4351' x='20' y='50' width='11' height='11'/%3E%3Crect fill='%232b4251' x='80' width='11' height='11'/%3E%3Crect fill='%232b4251' x='70' y='10' width='11' height='11'/%3E%3Crect fill='%232b4251' x='60' y='20' width='11' height='11'/%3E%3Crect fill='%232b4251' x='50' y='30' width='11' height='11'/%3E%3Crect fill='%232b4250' x='40' y='40' width='11' height='11'/%3E%3Crect fill='%232a4250' x='30' y='50' width='11' height='11'/%3E%3Crect fill='%232a4150' x='90' width='11' height='11'/%3E%3Crect fill='%232a4150' x='80' y='10' width='11' height='11'/%3E%3Crect fill='%232a4150' x='70' y='20' width='11' height='11'/%3E%3Crect fill='%232a414f' x='60' y='30' width='11' height='11'/%3E%3Crect fill='%232a414f' x='50' y='40' width='11' height='11'/%3E%3Crect fill='%232a414f' x='40' y='50' width='11' height='11'/%3E%3Crect fill='%232a404f' x='90' y='10' width='11' height='11'/%3E%3Crect fill='%232a404f' x='80' y='20' width='11' height='11'/%3E%3Crect fill='%2329404e' x='70' y='30' width='11' height='11'/%3E%3Crect fill='%2329404e' x='60' y='40' width='11' height='11'/%3E%3Crect fill='%2329404e' x='50' y='50' width='11' height='11'/%3E%3Crect fill='%2329404e' x='90' y='20' width='11' height='11'/%3E%3Crect fill='%23293f4e' x='80' y='30' width='11' height='11'/%3E%3Crect fill='%23293f4d' x='70' y='40' width='11' height='11'/%3E%3Crect fill='%23293f4d' x='60' y='50' width='11' height='11'/%3E%3Crect fill='%23293f4d' x='90' y='30' width='11' height='11'/%3E%3Crect fill='%23283f4d' x='80' y='40' width='11' height='11'/%3E%3Crect fill='%23283f4d' x='70' y='50' width='11' height='11'/%3E%3Crect fill='%23283e4c' x='90' y='40' width='11' height='11'/%3E%3Crect fill='%23283e4c' x='80' y='50' width='11' height='11'/%3E%3Crect fill='%23283E4C' x='90' y='50' width='11' height='11'/%3E%3C/g%3E%3C/svg%3E");
  background-attachment: fixed;
  background-size: cover;

  .hero{
    width: 100%;
    padding-top: 2em;
    @include flexColumnCenter;

    .imageContainer{
      width: 300px;
      height: 500px;
      max-height: 600px;
      position: relative;
      @include flexColumnCenter;
      justify-content: center;
    }

    .servicesCard {
      margin-top: 1em;
      @include flexColumnCenter;
      color: $colour2;
      
      .servicesTitle{
        margin-bottom: .5em;
        font-family: 'Inspiration', cursive;
        font-size: 2.25em;
        text-align: center;
      }

      h4{
        font-size: 21px;
      }
    
      .services{
        // width: 215px;
        @include flexColumn;
        list-style: none;
        margin-bottom: 2em;
        
        .serviceItem{
          width: max-content;
          max-height: 30px;
          // padding-left: 35px;
          position: relative;
          display: flex;
          margin: .5em;
          font-size: 1.15em;

          a{
            width: fit-content;
            z-index: 1;
            
            &:hover{
              color: $colour5;
            }

            p{
              margin-left: 35px;
            } 
          }
    
          .imageContainer{
            position: absolute;
            width: 100%;
            height: 100%;
            z-index: 0;
            
            .svgPath{
              fill: rgba(255, 255, 255, 0);
              stroke: $colour5;
              stroke-width: 2px;
              // stroke-miterlimit: 10;
              stroke-dashoffset: -410;
              stroke-dasharray: 410;
              // transition: stroke-dashOffset 1s ease;
              animation: draw 1s forwards;
            }
          }
        }
      }
    }

  }
}
/* ... */

